* .DS_Store: Added Another Test Cases
* .DS_Store:
* PokemonControllerTest.cs:
* TrueLayerChallenge.Tests.csproj:

--- a/TrueLayerChallenge.Tests/TrueLayerChallenge.Tests.csproj
+++ b/TrueLayerChallenge.Tests/TrueLayerChallenge.Tests.csproj
@@ -23,5 +23,6 @@
 	<ItemGroup>
 	  <None Remove="Moq" />
 	  <None Remove="xunit.runner.visualstudio" />
+	  <None Remove=".DS_Store" />
 	</ItemGroup>
 </Project>
