--- a/TrueLayerChallenge/Properties/launchSettings.json
+++ b/TrueLayerChallenge/Properties/launchSettings.json
@@ -15,7 +15,7 @@
 				"ASPNETCORE_ENVIRONMENT": "Development"
 			}
 		},
-		"TrueLayerPokedex": {
+		"TrueLayerChallenge": {
 			"commandName": "Project",
 			"launchBrowser": true,
 			"environmentVariables": {
@@ -23,13 +23,6 @@
 			},
 			"dotnetRunMessages": "true",
 			"applicationUrl": "https://localhost:5091;http://localhost:5090"
-		},
-		"Docker": {
-			"commandName": "Docker",
-			"launchBrowser": true,
-			"launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-			"publishAllPorts": true,
-			"useSSL": true
 		}
 	}
 }
